merge with master, cleanup, colorize Reinforce Button